<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:arv="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notes_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.smlnskgmail.jaman.adaptiverecyclerview.AdaptiveRecyclerView
        android:id="@+id/notes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.smlnskgmail.jaman.adaptiverecyclerview.AdaptiveMessageView
        android:id="@+id/notes_list_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        arv:message_image="@drawable/ic_note_add"
        arv:message_image_tint="@color/colorUnselectedItem"
        arv:message_text="@string/message_empty_notes_list"
        arv:message_text_color="@color/colorUnselectedItem" />

    <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        fab:fabs_menu_overlayColor="@color/colorBackgroundFab"
        fab:fabs_menu_clickableOverlay="true">

        <jahirfiquitiva.libs.fabsmenu.FABsMenu
            android:id="@+id/main_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            fab:fab_moreButtonBackgroundColor="@color/colorAccent"
            fab:fab_moreButtonRippleColor="@color/colorMainFabMenuPressed"
            fab:fab_moreButtonPlusIcon="@drawable/ic_add">

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/share_access"
                style="@style/AppFAB"
                fab:fab_title="@string/common_invite"
                fab:backgroundTint="@color/colorMainFabShare"
                fab:srcCompat="@drawable/ic_share"
                fab:fabSize="mini" />

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/restore_notes"
                style="@style/AppFAB"
                fab:fab_title="@string/action_restore"
                fab:backgroundTint="@color/colorMainFabRestore"
                fab:srcCompat="@drawable/ic_restore"
                fab:fabSize="mini" />

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/sync_notes"
                style="@style/AppFAB"
                fab:fab_title="@string/action_sync"
                fab:backgroundTint="@color/colorMainFabSync"
                fab:srcCompat="@drawable/ic_sync"
                fab:fabSize="mini" />

            <jahirfiquitiva.libs.fabsmenu.TitleFAB
                android:id="@+id/add_note"
                style="@style/AppFAB"
                fab:fab_title="@string/action_add_note"
                fab:backgroundTint="@color/colorMainFabAddNote"
                fab:srcCompat="@drawable/ic_note_add"
                fab:fabSize="mini" />

        </jahirfiquitiva.libs.fabsmenu.FABsMenu>

    </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>

</FrameLayout>