<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_invite_title"
        style="@style/AppText"
        android:layout_marginTop="@dimen/margin_custom_1"
        android:layout_marginStart="@dimen/margin_medium"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/common_invite"/>

    <EditText
        android:id="@+id/dialog_invite_email"
        style="@style/AppEditText"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:hint="@string/hint_email"
        tools:ignore="Autofill,TextFields"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_custom_2"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_gravity="end">

        <Button
            android:id="@+id/dialog_invite_cancel"
            style="@style/AppButton"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/common_cancel"/>

        <Button
            android:id="@+id/dialog_invite_request"
            style="@style/AppButton"
            android:text="@string/common_invite"/>

    </LinearLayout>

</LinearLayout>