<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_screen"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:text="@string/app_name" />

        <EditText
            android:id="@+id/email"
            style="@style/AppEditText"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/hint_email"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/password"
            style="@style/AppEditText"
            android:layout_marginTop="@dimen/margin_default"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            tools:ignore="Autofill,TextFields" />

        <com.smlnskgmail.jaman.randomnotes.components.VectorDrawableButton
            android:id="@+id/auth_action"
            style="@style/AppSignInButton"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/action_sign_in" />

        <TextView
            android:id="@+id/register_account"
            style="@style/AppText"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/message_not_account" />

        <com.smlnskgmail.jaman.randomnotes.components.VectorDrawableButton
            android:id="@+id/google_sign_in"
            style="@style/AppGoogleSignInButton"
            android:layout_marginTop="@dimen/margin_large" />

        <com.smlnskgmail.jaman.randomnotes.components.VectorDrawableButton
            android:id="@+id/facebook_sign_in"
            style="@style/AppFacebookSignInButton"
            android:layout_marginTop="@dimen/margin_small" />

    </LinearLayout>

</ScrollView>